[BI-1146] remove unneeded Classes, clean up code